--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo-msexp2017",
   "version": "1.0.0",
   "description": "",
+  "license": "Apache-2.0",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +13,5 @@
     "botfuel-qna-sdk": "^1.1.0",
     "restify": "^4.3.0"
   },
-  "author": "",
-  "license": "ISC"
+  "author": ""
 }
